[package]
name = "codebreaker"
version = "0.1.0"
authors = ["mosm <airman515@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
clap = "2.33.1"
crossbeam-channel = "0.4.2"
crossterm = "0.17.6"
itertools = "0.9.0"
rand = "0.7.3"
structopt = "0.3.15"
tui = { version = "0.9.5", features = ["crossterm"], default-features = false }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
